--- a/index.html
+++ b/index.html
@@ -526,27 +526,39 @@ async function loadMap() {
   }
 // Hover effect
 layer.on('mouseover', function () {
-  const currentColor = layer._originalColor;
-  if (['black', 'red', 'yellow'].includes(currentColor)) {
-    layer.setStyle({
-      color: '#ffd700', // gold/yellow
-      weight: 7,
-      opacity: 1
-    });
-    layer.bringToFront?.();
+  const name = feature.properties.name || "";
+  const matchingLayers = nameToLayers[name] || [];
+
+  for (const l of matchingLayers) {
+    const currentColor = l._originalColor;
+    if (['black', 'red', 'yellow'].includes(currentColor)) {
+      l.setStyle({
+        color: '#ffd700',
+        weight: 7,
+        opacity: 1
+      });
+      l.bringToFront?.();
+    }
   }
 });
 
+
 layer.on('mouseout', function () {
-  const currentColor = layer._originalColor;
-  if (['black', 'red', 'yellow'].includes(currentColor)) {
-    layer.setStyle({
-      color: currentColor,
-      weight: 6,
-      opacity: 1
-    });
+  const name = feature.properties.name || "";
+  const matchingLayers = nameToLayers[name] || [];
+
+  for (const l of matchingLayers) {
+    const original = l._originalColor;
+    if (['black', 'red', 'yellow'].includes(original)) {
+      l.setStyle({
+        color: original,
+        weight: 6,
+        opacity: 1
+      });
+    }
   }
 });
+
 
 
   layer.on('click', function () {
