--- a/index.html
+++ b/index.html
@@ -533,9 +533,10 @@ layer.on('mouseover', function () {
     const currentColor = l._originalColor;
     if (['black', 'red', 'yellow'].includes(currentColor)) {
       l.setStyle({
-        color: '#ffd700',
-        weight: 7,
-        opacity: 1
+        color: '#ffd700',   // gold
+        weight: 8,
+        opacity: 0.6,
+        lineCap: 'round'
       });
       l.bringToFront?.();
     }
