--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ layer.on('mouseover', function () {
     const currentColor = l._originalColor;
     if (['black', 'red', 'yellow'].includes(currentColor)) {
       l.setStyle({
-        color: '#ffd700',   // gold
+        color: '#00ffff',   // gold
         weight: 8,
         opacity: 0.6,
         lineCap: 'round'
