--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@ layer.on('mouseover', function () {
     const currentColor = l._originalColor;
     if (['black', 'red', 'yellow'].includes(currentColor)) {
       l.setStyle({
-        color: '#00ffff',   // gold
+        color: '#ffffff',   // gold
         weight: 8,
-        opacity: 0.6,
+        opacity: 1
         lineCap: 'round'
       });
       l.bringToFront?.();
