--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
   autocapitalize="off" 
   spellcheck="false" 
 />
+    <div id="inline-encouragement" style="display: none; margin-top: 10px; font-size: 12.5px; color: #333; background: #fff8dc; padding: 8px 10px; border-radius: 6px; border: 1px solid #ccc;">
+  <strong>Log in to save your progress!</strong><br>
+  <span style="font-size: 12px;">Guesses won’t be saved unless you log in.</span>
+</div>
+
 
     <div>
       <button id="submit-guess">Submit</button>
