--- a/index.html
+++ b/index.html
@@ -685,6 +685,24 @@ if (currentUserId) {
   if (color === 'yellow') hideDelay = 5001;
 
   setTimeout(() => {
+    // Reset blue active highlight before closing modal
+if (activeRoadName && nameToLayers[activeRoadName]) {
+  for (const l of nameToLayers[activeRoadName]) {
+    const id = String(l.feature.id);
+    const state = segmentStateMap.get(id);
+    if (state?.correct) {
+      l.setStyle({ color: 'gray', weight: 6 });
+    } else if (state?.used_hint) {
+      l.setStyle({ color: 'orange', weight: 6 });
+    } else if (state?.incorrect) {
+      l.setStyle({ color: 'red', weight: 6 });
+    } else {
+      l.setStyle({ color: 'black', weight: 6 });
+    }
+  }
+  activeRoadName = null;
+}
+
     document.getElementById('guess-modal').style.display = 'none';
     document.getElementById('feedback-message').innerText = '';
     currentRoad = null;
@@ -750,6 +768,24 @@ document.getElementById('give-up').onclick = async function () {
 
   // Close modal regardless
   setTimeout(() => {
+    // Reset blue active highlight before closing modal
+if (activeRoadName && nameToLayers[activeRoadName]) {
+  for (const l of nameToLayers[activeRoadName]) {
+    const id = String(l.feature.id);
+    const state = segmentStateMap.get(id);
+    if (state?.correct) {
+      l.setStyle({ color: 'gray', weight: 6 });
+    } else if (state?.used_hint) {
+      l.setStyle({ color: 'orange', weight: 6 });
+    } else if (state?.incorrect) {
+      l.setStyle({ color: 'red', weight: 6 });
+    } else {
+      l.setStyle({ color: 'black', weight: 6 });
+    }
+  }
+  activeRoadName = null;
+}
+
     document.getElementById('guess-modal').style.display = 'none';
     document.getElementById('feedback-message').innerText = '';
     window.scrollTo({ top: 0, behavior: 'smooth' });
