--- a/index.html
+++ b/index.html
@@ -549,46 +549,50 @@ layer.on('mouseout', function () {
 
 
 
-  layer.on('click', function () {
+layer.on('click', function () {
   const state = segmentStateMap.get(id);
-if (state?.correct || state?.used_hint) return;
+  if (state?.correct || state?.used_hint) return;
 
-
-    currentRoad = {
-      name: name,
-      id: id,
-      attempts: 0,
-      layer: layer
-    };
-
-    document.getElementById('guess-modal').style.display = 'block';
-    // Highlight active (selected) road when modal appears
-if (activeRoadName && nameToLayers[activeRoadName]) {
-  for (const l of nameToLayers[activeRoadName]) {
-    const id = String(l.feature.id);
-    const state = segmentStateMap.get(id);
-    if (state?.correct) {
-      l.setStyle({ color: 'gray', weight: 6 });
-    } else if (state?.used_hint) {
-      l.setStyle({ color: 'orange', weight: 6 });
-    } else if (state?.incorrect) {
-      l.setStyle({ color: 'red', weight: 6 });
-    } else {
-      l.setStyle({ color: 'black', weight: 6 });
+  // Reset any previously highlighted road (remove blue highlight)
+  if (activeRoadName && nameToLayers[activeRoadName]) {
+    for (const l of nameToLayers[activeRoadName]) {
+      const segmentId = String(l.feature.id);
+      const s = segmentStateMap.get(segmentId);
+      if (s?.correct) {
+        l.setStyle({ color: 'gray', weight: 6 });
+      } else if (s?.used_hint) {
+        l.setStyle({ color: 'orange', weight: 6 });
+      } else if (s?.incorrect) {
+        l.setStyle({ color: 'red', weight: 6 });
+      } else {
+        l.setStyle({ color: 'black', weight: 6 });
+      }
     }
   }
-}
 
-// Highlight current selection in blue
-for (const l of nameToLayers[name] || []) {
-  l.setStyle({ color: '#00ccff', weight: 8 });
-}
-activeRoadName = name;
+  // Highlight current selection in blue
+  for (const l of nameToLayers[name] || []) {
+    l.setStyle({ color: '#00ccff', weight: 8 });
+  }
+  activeRoadName = name;
 
-    document.getElementById('guess-input').value = '';
-    document.getElementById('feedback-message').innerText = '';
-    document.getElementById('guess-input').focus();
-  });
+  // Track selected road
+  currentRoad = {
+    name: name,
+    id: id,
+    attempts: 0,
+    layer: layer
+  };
+
+  interactionCount++;
+
+  // Open modal and reset input/feedback
+  document.getElementById('guess-modal').style.display = 'block';
+  document.getElementById('guess-input').value = '';
+  document.getElementById('feedback-message').innerText = '';
+  document.getElementById('guess-input').focus();
+});
+
 }
                  }).addTo(map); // ✅ end of geoJSON block
       }); // ✅ closes .then(data => { ... })
