--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script type="module">
   let currentRoad = null;
+  let activeRoadName = null;
+
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
   const supabase = createClient(
