--- a/index.html
+++ b/index.html
@@ -513,14 +513,13 @@ async function loadMap() {
   layer.setStyle({ color: 'orange', weight: 6 });
       layer._originalColor = 'orange';
 } else if (state.correct) {
-  layer.setStyle({ color: 'gray', weight: 6 });
-      layer._originalColor = 'gray';
+    addGreenOverlay(feature); // Show permanent green overlay
+}
 } else {
   layer.setStyle({ color: 'red', weight: 6 });
       layer._originalColor = 'red';
 }
 
-  } else {
     layer.setStyle({ color: 'black', weight: 6 });
     layer._originalColor = 'black';
   }
