--- a/index.html
+++ b/index.html
@@ -507,22 +507,22 @@ async function loadMap() {
   if (!nameToLayers[name]) nameToLayers[name] = [];
   nameToLayers[name].push(layer);
 
-  if (segmentStateMap.has(id)) {
-    const state = segmentStateMap.get(id);
-    if (state.used_hint) {
-  layer.setStyle({ color: 'orange', weight: 6 });
-      layer._originalColor = 'orange';
-} else if (state.correct) {
+ if (segmentStateMap.has(id)) {
+  const state = segmentStateMap.get(id);
+  if (state.used_hint) {
+    layer.setStyle({ color: 'orange', weight: 6 });
+    layer._originalColor = 'orange';
+  } else if (state.correct) {
     addGreenOverlay(feature); // Show permanent green overlay
-}
+  } else {
+    layer.setStyle({ color: 'red', weight: 6 });
+    layer._originalColor = 'red';
+  }
 } else {
-  layer.setStyle({ color: 'red', weight: 6 });
-      layer._originalColor = 'red';
+  layer.setStyle({ color: 'black', weight: 6 });
+  layer._originalColor = 'black';
 }
 
-    layer.setStyle({ color: 'black', weight: 6 });
-    layer._originalColor = 'black';
-  }
 // Hover effect
 layer.on('mouseover', function () {
   const name = feature.properties.name || "";
