--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ async function loadGuessedSegmentIds() {
 function addGreenOverlay(segment) {
   const coords = segment.geometry.coordinates.map(([lng, lat]) => [lat, lng]);
   const greenLine = L.polyline(coords, {
-    color: '#2e7d32', // Dark green
+    color: '#00ff00', // Bright green
     weight: 8,
     opacity: 0.35,
     lineCap: 'round'
