--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@ if (currentUserId) {
   savePreLoginGuess({ segmentIds, isCorrect, usedHint });
 }
 
-if (isCorrect && usedHint) {
+if (isCorrect || usedHint) {
   completedRoads.add(normalizedCorrect);
 
   for (const l of nameToLayers[normalizedCorrect] || []) {
@@ -706,21 +706,13 @@ if (isCorrect && usedHint) {
     const totalPoints = originalCoords.length;
     if (totalPoints < 2) continue;
 
-    let index = 0;
-    const dissolveInterval = setInterval(() => {
-      if (index >= totalPoints) {
-        clearInterval(dissolveInterval);
-        console.log("✅ Finished dissolving road");
-        return;
-      }
-
-      const newCoords = originalCoords.slice(index);
-      l.setLatLngs(newCoords);
-      console.log(`Dissolving: index ${index} / ${totalPoints}`);
-      index++;
-    }, 150); // Slow for visibility
+    const half = Math.floor(totalPoints / 2);
+    const newCoords = originalCoords.slice(half); // Keep only second half
+    console.log("💥 Forcing latLng shrink:", newCoords.length, "of", totalPoints);
+    l.setLatLngs(newCoords);
   }
 }
+
 
 
   // Show correct answer if hint was used but still wrong
