--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ if (activeRoadName && nameToLayers[activeRoadName]) {
     const id = String(l.feature.id);
     const state = segmentStateMap.get(id);
     if (state?.correct) {
-      l.setStyle({ color: 'gray', weight: 6 });
+     fadeOutLineAndAddGreenGlow(layer);
     } else if (state?.used_hint) {
       l.setStyle({ color: 'orange', weight: 6 });
     } else if (state?.incorrect) {
