--- a/index.html
+++ b/index.html
@@ -470,32 +470,32 @@ async function saveGuessSegmentIds(segmentIds, isCorrect, usedHint = false) {
 }
 
 function fadeOutLineAndAddGreenGlow(layer) {
-  // Start with full gray line
-  layer.setStyle({ color: 'gray', weight: 6 });
+  let opacity = 1.0;
+  const fadeDuration = 300; // in ms
+  const fadeStep = 50;
+  const steps = fadeDuration / fadeStep;
+  const opacityStep = opacity / steps;
 
-  // Fade to transparent over 0.4s
-  const el = layer.getElement?.();
-  if (!el) return;
-
-  el.style.transition = 'stroke 0.4s ease-out';
-  el.style.stroke = 'transparent';
-
-  // After the fade, add green glow stroke
-  setTimeout(() => {
-    layer.setStyle({
-      color: '#00ff88',
-      weight: 5,
-      opacity: 0.8,
-      dashArray: 'none'
-    });
-
-    const el2 = layer.getElement?.();
-    if (el2) {
-      el2.style.stroke = '#00ff88';
-      el2.style.filter = 'drop-shadow(0 0 5px #00ff88)';
+  const fadeInterval = setInterval(() => {
+    opacity -= opacityStep;
+    if (opacity <= 0) {
+      clearInterval(fadeInterval);
+      // Add glowing green overlay
+      layer.setStyle({
+        color: 'rgba(0, 255, 0, 0.3)',
+        weight: 10,
+        opacity: 1,
+        className: 'green-glow'
+      });
+    } else {
+      layer.setStyle({
+        opacity: opacity,
+        weight: 6
+      });
     }
-  }, 400);
+  }, fadeStep);
 }
+
 
 function applyColorToAllSegments(name, color) {
   if (!nameToLayers[name]) return;
