--- a/index.html
+++ b/index.html
@@ -154,6 +154,36 @@
       cursor: pointer;
       margin: 4px;
     }
+    /* Correct guess dissolve and overlay animation */
+.dissolve-road {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: black;
+  animation: dissolve 2s forwards;
+  z-index: 1;
+}
+
+.green-overlay {
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  background: #355E3B;
+  opacity: 0.7;
+  z-index: 0;
+  animation: fadeGreen 2s 2s forwards;
+}
+
+@keyframes dissolve {
+  0% { clip-path: inset(0% 0% 0% 0%); opacity: 1; }
+  100% { clip-path: inset(0% 100% 0% 0%); opacity: 0; }
+}
+
+@keyframes fadeGreen {
+  0% { width: 0%; opacity: 0; }
+  100% { width: 100%; opacity: 0.7; }
+}
+
   </style>
 </head>
 <body>
