--- a/index.html
+++ b/index.html
@@ -757,6 +757,8 @@ if (currentUserId) {
 
 if (isCorrect && !usedHint) {
   runCorrectGuessAnimation(currentRoad.layer.getBounds().getCenter());
+for (const l of nameToLayers[normalizedCorrect] || []) {
+  l.setStyle({ weight: 0 });
 }
 
   // Show correct answer if hint was used but still wrong
