--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
   height: 100%;
   background: black;
   animation: dissolve 2s forwards;
-  z-index: 1;
+  pointer-events: none;
+  z-index: 9999; /* BOOSTED */
 }
 
 .green-overlay {
@@ -170,8 +171,9 @@
   height: 100%;
   background: #355E3B;
   opacity: 0.7;
-  z-index: 0;
   animation: fadeGreen 2s 2s forwards;
+  pointer-events: none;
+  z-index: 9998; /* BOOSTED */
 }
 
 @keyframes dissolve {
