--- a/index.html
+++ b/index.html
@@ -154,6 +154,40 @@
       cursor: pointer;
       margin: 4px;
     }
+    /* Animate dissolve (black stroke disappearing left to right) */
+.dissolve-stroke {
+  stroke: black;
+  stroke-width: 4;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 0;
+  animation: dashFade 2s ease forwards;
+}
+
+/* Animate green fade-in from right to left */
+.fade-green-stroke {
+  stroke: #355E3B;
+  stroke-width: 4;
+  stroke-opacity: 0;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: fadeGreenStroke 2s ease forwards;
+  animation-delay: 2s;
+}
+
+@keyframes dashFade {
+  to {
+    stroke-dashoffset: 1000;
+    stroke-opacity: 0;
+  }
+}
+
+@keyframes fadeGreenStroke {
+  to {
+    stroke-dashoffset: 0;
+    stroke-opacity: 0.7;
+  }
+}
+
   </style>
 </head>
 <body>
