--- a/index.html
+++ b/index.html
@@ -726,11 +726,13 @@ if (attemptCounts[currentRoad.id] >= 4 && !currentRoad.hintGiven) {
     k => normalizeName(k) === normalizedCorrect
   );
   const segmentIds = roadNameToIds[normalizedKey];
+  if (!(isCorrect && !usedHint)) {
   for (const layer of nameToLayers[normalizedKey] || []) {
     layer.setStyle({ color: color, weight: 6 });
     layer._originalColor = color;
-
   }
+}
+
 
 if (currentUserId) {
   await saveGuessSegmentIds(segmentIds, isCorrect, usedHint);
