--- a/index.html
+++ b/index.html
@@ -748,16 +748,20 @@ if (isCorrect && !usedHint) {
     }
 
     // Start dissolve
+    console.log('Path element:', layer._path);
     layer._path.classList.add('dissolve-stroke');
 
     // Switch to green after 2s
     setTimeout(() => {
+      console.log('Path element:', layer._path);
       layer._path.classList.remove('dissolve-stroke');
+      console.log('Path element:', layer._path);
       layer._path.classList.add('fade-green-stroke');
     }, 2000);
 
     // Final state after 5s
     setTimeout(() => {
+      console.log('Path element:', layer._path);
       layer._path.classList.remove('fade-green-stroke');
       layer.setStyle({
         color: '#355E3B',
